Replace exec() with ProcessBuilder and printStackTrace() with LOGGER